Prevent popup from resizing on firefox

--- a/src/popup/layout.scss
+++ b/src/popup/layout.scss
@@ -1,7 +1,7 @@
 @import '../palette';
 
 .app {
-  min-width: 25rem;
+  width: 25rem;
 
   .page-content {
     padding: 1rem;
